修正了函数名

--- a/views/register.jade
+++ b/views/register.jade
@@ -5,4 +5,5 @@ block content
   form(action="/register" method="POST")
     input(type="text" name="username" placeholder="用户名" required)
     input(type="password" name="password" placeholder="密码" required)
+    input(type="confirmPassword" name="confirmPassword" placeholder="密码" required)
     button(type="submit") 注册
